# GameStatistics

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: macro.hpp  mainwindow.hpp
include/dsa/: country.hpp  countryscore.hpp  sport.hpp  statistic.hpp  vararray.hpp
resources/: build.html  country.list  help.html  profile.html  sport.list
src/: main.cc
src/statistic/: country.cc  sport.cc  statistic.cc
src/ui/: mainwindow.cc  mainwindow.ui  querypage.cc  rankpage.cc  scorespage.cc  scorespage_init.cc  scorespage_update.cc  sportspage.cc
tests/: CMakeLists.txt  vararray_test.cc  vararray_test.hpp
